# py-fastapi-online-cinema

./: .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0469a8eadf53_initial_cinema_tables.py  3a4d94e7d860_fix_models_and_add_interactions.py  e93e3d6d3b3a_create_auth_tables.py
app/: admin_movies.py  auth.py  auth_utils.py  cart.py  database.py  interactions.py  main.py  models.py  movies.py  schemas.py  seed.py  utils.py  worker.py
app/routers/: admin_movies.py  auth.py  cart.py  interactions.py  movies.py
app/utils/: auth_utils.py  utils.py
app/worker/: worker.py
tests/: conftest.py  test_auth.py  test_functional.py  test_unit.py
